{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 40,
  "lineage": "d7c2c52b-4690-720f-3771-fc6212bd5a55",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01577b5ca40054ebb",
            "arn": "arn:aws:ec2:us-east-1:724413958876:elastic-ip/eipalloc-01577b5ca40054ebb",
            "domain": "vpc",
            "id": "eipalloc-01577b5ca40054ebb",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-100-62-246-184.compute-1.amazonaws.com",
            "public_ip": "100.62.246.184",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "sre-go-web-app-nat-eip-1"
            },
            "tags_all": {
              "Name": "sre-go-web-app-nat-eip-1"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "724413958876",
            "id": "eipalloc-01577b5ca40054ebb",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a5d66edb5335858a",
            "arn": "arn:aws:ec2:us-east-1:724413958876:elastic-ip/eipalloc-0a5d66edb5335858a",
            "domain": "vpc",
            "id": "eipalloc-0a5d66edb5335858a",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-156-250-169.compute-1.amazonaws.com",
            "public_ip": "54.156.250.169",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "sre-go-web-app-nat-eip-2"
            },
            "tags_all": {
              "Name": "sre-go-web-app-nat-eip-2"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "724413958876",
            "id": "eipalloc-0a5d66edb5335858a",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724413958876:internet-gateway/igw-070233a0bc0451a1c",
            "id": "igw-070233a0bc0451a1c",
            "owner_id": "724413958876",
            "region": "us-east-1",
            "tags": {
              "Name": "sre-go-web-app-igw"
            },
            "tags_all": {
              "Name": "sre-go-web-app-igw"
            },
            "vpc_id": "vpc-0467e0f5defd5c1ea"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "724413958876",
            "id": "igw-070233a0bc0451a1c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01577b5ca40054ebb",
            "association_id": "eipassoc-04d732ec5018ceae1",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-03dc4d105160a8cbc",
            "network_interface_id": "eni-0be6ee8c249f69455",
            "private_ip": "10.0.1.184",
            "public_ip": "100.62.246.184",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0950dd492a3cdb3b7",
            "tags": {
              "Name": "sre-go-web-app-nat-1"
            },
            "tags_all": {
              "Name": "sre-go-web-app-nat-1"
            },
            "vpc_id": "vpc-0467e0f5defd5c1ea"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "724413958876",
            "id": "nat-03dc4d105160a8cbc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_1",
            "aws_internet_gateway.main",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a5d66edb5335858a",
            "association_id": "eipassoc-08df520923a590f80",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-033469a933f29063e",
            "network_interface_id": "eni-0a8d41aea158903d9",
            "private_ip": "10.0.2.12",
            "public_ip": "54.156.250.169",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b5fe7cedd472ee5d",
            "tags": {
              "Name": "sre-go-web-app-nat-2"
            },
            "tags_all": {
              "Name": "sre-go-web-app-nat-2"
            },
            "vpc_id": "vpc-0467e0f5defd5c1ea"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "724413958876",
            "id": "nat-033469a933f29063e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_2",
            "aws_internet_gateway.main",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724413958876:route-table/rtb-0e27fe2cb9a4307ba",
            "id": "rtb-0e27fe2cb9a4307ba",
            "owner_id": "724413958876",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03dc4d105160a8cbc",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sre-go-web-app-private-rt-1"
            },
            "tags_all": {
              "Name": "sre-go-web-app-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0467e0f5defd5c1ea"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "724413958876",
            "id": "rtb-0e27fe2cb9a4307ba",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_1",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat_1",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724413958876:route-table/rtb-00449f09f14637fd9",
            "id": "rtb-00449f09f14637fd9",
            "owner_id": "724413958876",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-033469a933f29063e",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sre-go-web-app-private-rt-2"
            },
            "tags_all": {
              "Name": "sre-go-web-app-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0467e0f5defd5c1ea"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "724413958876",
            "id": "rtb-00449f09f14637fd9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_2",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat_2",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724413958876:route-table/rtb-0e21a06a92edc3992",
            "id": "rtb-0e21a06a92edc3992",
            "owner_id": "724413958876",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-070233a0bc0451a1c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sre-go-web-app-public-rt"
            },
            "tags_all": {
              "Name": "sre-go-web-app-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0467e0f5defd5c1ea"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "724413958876",
            "id": "rtb-0e21a06a92edc3992",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba1294b7675f25b6",
            "region": "us-east-1",
            "route_table_id": "rtb-0e27fe2cb9a4307ba",
            "subnet_id": "subnet-0855787520f91b29c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "724413958876",
            "id": "rtbassoc-0ba1294b7675f25b6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_1",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat_1",
            "aws_route_table.private_1",
            "aws_subnet.private_1",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031734afd4300cabf",
            "region": "us-east-1",
            "route_table_id": "rtb-00449f09f14637fd9",
            "subnet_id": "subnet-075c8361364485b5d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "724413958876",
            "id": "rtbassoc-031734afd4300cabf",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_2",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat_2",
            "aws_route_table.private_2",
            "aws_subnet.private_2",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9106f4f8cadd725",
            "region": "us-east-1",
            "route_table_id": "rtb-0e21a06a92edc3992",
            "subnet_id": "subnet-0950dd492a3cdb3b7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "724413958876",
            "id": "rtbassoc-0d9106f4f8cadd725",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060fda58c50919fe1",
            "region": "us-east-1",
            "route_table_id": "rtb-0e21a06a92edc3992",
            "subnet_id": "subnet-0b5fe7cedd472ee5d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "724413958876",
            "id": "rtbassoc-060fda58c50919fe1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724413958876:subnet/subnet-0855787520f91b29c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0855787520f91b29c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724413958876",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "sre-go-web-app-private-1"
            },
            "tags_all": {
              "Name": "sre-go-web-app-private-1"
            },
            "vpc_id": "vpc-0467e0f5defd5c1ea"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "724413958876",
            "id": "subnet-0855787520f91b29c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724413958876:subnet/subnet-075c8361364485b5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075c8361364485b5d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724413958876",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "sre-go-web-app-private-2"
            },
            "tags_all": {
              "Name": "sre-go-web-app-private-2"
            },
            "vpc_id": "vpc-0467e0f5defd5c1ea"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "724413958876",
            "id": "subnet-075c8361364485b5d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724413958876:subnet/subnet-0950dd492a3cdb3b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0950dd492a3cdb3b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "724413958876",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "sre-go-web-app-public-1"
            },
            "tags_all": {
              "Name": "sre-go-web-app-public-1"
            },
            "vpc_id": "vpc-0467e0f5defd5c1ea"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "724413958876",
            "id": "subnet-0950dd492a3cdb3b7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724413958876:subnet/subnet-0b5fe7cedd472ee5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5fe7cedd472ee5d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "724413958876",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "sre-go-web-app-public-2"
            },
            "tags_all": {
              "Name": "sre-go-web-app-public-2"
            },
            "vpc_id": "vpc-0467e0f5defd5c1ea"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "724413958876",
            "id": "subnet-0b5fe7cedd472ee5d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724413958876:vpc/vpc-0467e0f5defd5c1ea",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-026597e2faf16d113",
            "default_route_table_id": "rtb-053199c19513a3759",
            "default_security_group_id": "sg-01745e54d38c1f81e",
            "dhcp_options_id": "dopt-0b42ab436a890d29f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0467e0f5defd5c1ea",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-053199c19513a3759",
            "owner_id": "724413958876",
            "region": "us-east-1",
            "tags": {
              "Name": "sre-go-web-app-vpc"
            },
            "tags_all": {
              "Name": "sre-go-web-app-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "724413958876",
            "id": "vpc-0467e0f5defd5c1ea",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}